# ggwave_flutter

./: .gitmodules  .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ggwave_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: ggwave_flutter.podspec
ios/Classes/: ggwave_flutter.c
lib/: ggwave_flutter.dart  ggwave_flutter_bindings_generated.dart
src/: CMakeLists.txt  ggwave_flutter.c  ggwave_flutter.h
